fw/src/main/java/com/github/angerona/fw/parser/ASMLParser.java
/* Generated By:JavaCC: Do not edit this line. ASMLParser.java */
package com.github.angerona.fw.parser;
import com.github.angerona.fw.reflection.Value;
import com.github.angerona.fw.reflection.BooleanExpression;
import com.github.angerona.fw.reflection.BooleanExpression.Operator;
import java.util.*;
@SuppressWarnings("all")

public class ASMLParser implements ASMLParserConstants {

  final public Value value() throws ParseException {
  boolean isString = false;
  boolean isVariable = false;
  int dotCount = 0;
  String readed = "";
  Token token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHARACTER:
      token = jj_consume_token(CHARACTER);
      isString = true;
      break;
    case DIGIT:
      token = jj_consume_token(DIGIT);
      break;
    case VAR:
      token = jj_consume_token(VAR);
          isVariable=true;
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    readed += token.image;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER:
      case DIGIT:
      case DOT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER:
        token = jj_consume_token(CHARACTER);
              isString=true;
        break;
      case DIGIT:
        token = jj_consume_token(DIGIT);
        break;
      case DOT:
        token = jj_consume_token(DOT);
                  dotCount += 1;
                  if(dotCount > 1)
                  {
                    isString = true;
                  }
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          readed += token.image;
    }
    try
    {

            if(isString)
            {
              if(readed.equalsIgnoreCase("TRUE") || readed.equalsIgnoreCase("FALSE"))
              {
                {if (true) return new Value(readed, Boolean.class.getName());}
              }
              {if (true) return new Value(readed, String.class.getName());}
            }
            else if(isVariable)
            {
              {if (true) return new Value(readed, Value.CONTEXT_REFERENCE_TYPE);}
            }
            else
            {
              if(dotCount == 1)
              {
                {if (true) return new Value(readed, Double.class.getName());}
              }
              {if (true) return new Value(readed, Integer.class.getName());}
            }
        } catch(ClassNotFoundException ex)
        {
          {if (true) throw new ParseException(ex.getMessage());}
        }
    throw new Error("Missing return statement in function");
  }

  final public BooleanExpression booleanExpression() throws ParseException {
  Token token = null;
  Value left = null;
  Value right = null;
  BooleanExpression.Operator op = null;
    left = value();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMPARE_OPERATOR:
      token = jj_consume_token(COMPARE_OPERATOR);
      op = BooleanExpression.Operator.fromString(token.image);
      right = value();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    if(right == null)
    {
      {if (true) return new BooleanExpression(left);}
    }
    {if (true) return new BooleanExpression(left, op, right);}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ASMLParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xe0,0x160,0x160,0x200,};
   }

  /** Constructor with InputStream. */
  public ASMLParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ASMLParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ASMLParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ASMLParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ASMLParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ASMLParser(ASMLParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ASMLParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[10];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 4; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 10; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
